--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Ignore generated files
 # ...
 
+# Ignore all without extensions
+*
+!*.*
+!*/
+
 # Ignore VIM's backup generated files
 *.swp
 *.swo
