Add external folder to build (just in case)

--- a/src/Makefile
+++ b/src/Makefile
@@ -385,7 +385,7 @@ endif
 
 # Define include paths for required headers
 # NOTE: Several external required libraries (stb and others)
-INCLUDE_PATHS = -I. -Iexternal/glfw/include -Iexternal/glfw/deps/mingw
+INCLUDE_PATHS = -I. -Iexternal -Iexternal/glfw/include -Iexternal/glfw/deps/mingw
 
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),BSD)
