--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,12 @@ packages/
 *.bc
 *.so
 
+# Ignore wasm data in examples/
+examples/**/*.wasm
+examples/**/*.data
+examples/**/*.js
+examples/**/*.html
+
 # Ignore files build by xcode
 *.mode*v*
 *.pbxuser
